syntax = "proto3";

option java_package = "com.corkili.learningserver.generate.protobuf";
option java_outer_classname = "Request";

import "info.proto";

message BaseRequest {
    string token = 1;
}

message ImageLoadRequest {
    BaseRequest request = 1;
    repeated string imagePath = 2;
}

message UserLoginRequest {
    BaseRequest request = 1;
    string phone = 2;
    string password = 3;
    UserType userType = 4;
}

message UserRegisterRequest {
    BaseRequest request = 1;
    UserInfo userInfo = 2;
    string password = 3;
}

message UserLogoutRequest {
    BaseRequest request = 1;
}

message UserUpdateInfoRequest {
    BaseRequest request = 1;
    string phone = 2;
    UserType userType = 3;
    bool updatePhone = 4;
    string newPhone = 5;
    bool updateUsername = 6;
    string newUsername = 7;
    bool updatePassword = 8;
    string newPassword = 9;
}

message CourseCreateRequest {
    BaseRequest request = 1;
    string courseName = 2;
    string description = 3;
    repeated Image image = 4;
    repeated string tag = 5;
}

message CourseFindAllRequest {
    BaseRequest request = 1;
    bool all = 2;
    bool byTeacherId = 3;
    sint64 teacherId = 4;
    bool byTeacherName = 5;
    string teacherName = 6;
    bool byKeyword = 7;
    repeated string keyword = 8;
}

message CourseUpdateRequest {
    BaseRequest request = 1;
    sint64 courseId = 2;
    bool updateCourseName = 3;
    string courseName = 4;
    bool updateDescription = 5;
    string description = 6;
    bool updateImage = 7;
    repeated Image image = 8;
    bool updateTags = 9;
    repeated string tag = 10;
}

message CourseDeleteRequest {
    BaseRequest request = 1;
    sint64 courseId = 2;
}